--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
   <!-- Video Begins Here -->
   <div>
     <video class="screen" autoplay loop>
+    <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+  </div>
+  <!-- Sub heading -->
+  <h2>Your personal travel guide</h2>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>    
   </body>
 </html>
