--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
   </div>
   <!-- Video Begins Here -->
   <div>
-    <video class="screen" autoplay loop>
+    <video class="screen" autoplay muted loop>
     <source src="./resources/videos/excursion.mp4" type="video/mp4">
     </video>
   </div>
   <!-- Sub heading -->
   <h2>Your personal travel guide</h2>
-  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>    
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+<!-- div camp photo -->
+<div>
+  <img src= "./resources/images/camp.jpg"/>
+</div>
+<!-- phone icon with sub heading -->
+<div>
+  <img class="icon" src="./resources/images/phone.png"/>
+  <h2>Coming Soon for iPhone and Android</h2>
+</div>
   </body>
 </html>
