--- a/index.html
+++ b/index.html
@@ -30,5 +30,13 @@
   <img class="icon" src="./resources/images/phone.png"/>
   <h2>Coming Soon for iPhone and Android</h2>
 </div>
+<!-- Second download link -->
+<div>
+<a href="#"> Download Excursion (Coming Soon!)</a>
+</div>
+<!-- Footer-->
+<div class"footer">
+  <p>© Excursion</p>
+</div>
   </body>
 </html>
